adding photo links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <header class="header">
-      <img src="/#"
+      <img src="images/logo.png"
            alt="USA Logo"
            class="header__logo">
       <ul class="header__list">
@@ -30,7 +30,7 @@
       <p class="lead__subtitle">
         An epic bicycle journey from Portland, ME. to Portland, OR
       </p>
-      <img src="/#"
+      <img src="images/kalegin-michail-179870-unsplash.png"
            alt="Mountain Scenery"
            class="lead__image">
       <caption class="lead__caption">
@@ -79,63 +79,63 @@
     <section class="photo-grid">
       <ul class="photo-grid__list">
         <li class="photo-grid__list-item">
-          <img src="/#"
-               alt=""
+          <img src="images/grid/__item1.png"
+               alt="highway"
                class="photo-grid__item">
         </li>
         <li class="photo-grid__list-item">
-          <img src="/#"
-               alt=""
+          <img src="images/grid/__item2.png"
+               alt="streaking clouds"
                class="photo-grid__item">
         </li>
         <li class="photo-grid__list-item">
-          <img src="/#"
-               alt=""
+          <img src="images/grid/__item3.png"
+               alt="flock of birds"
                class="photo-grid__item">
         </li>
         <li class="photo-grid__list-item">
-          <img src="/#"
-               alt=""
+          <img src="images/grid/__item4.png"
+               alt="mountain with yellow flowers"
                class="photo-grid__item">
         </li>
         <li class="photo-grid__list-item">
-          <img src="/#"
-               alt=""
+          <img src="images/grid/__item5.png"
+               alt="foggy lake"
                class="photo-grid__item">
         </li>
         <li class="photo-grid__list-item">
-          <img src="/#"
-               alt=""
+          <img src="images/grid/__item6.png"
+               alt="mountain range blue"
                class="photo-grid__item">
         </li>
         <li class="photo-grid__list-item">
-          <img src="/#"
-               alt=""
+          <img src="images/grid/__item7.png"
+               alt="mountain with rocky foreground"
                class="photo-grid__item">
         </li>
         <li class="photo-grid__list-item">
-          <img src="/#"
-               alt=""
+          <img src="images/grid/__item8.png"
+               alt="flower with blurred background"
                class="photo-grid__item">
         </li>
         <li class="photo-grid__list-item">
-          <img src="/#"
-               alt=""
+          <img src="images/grid/__item9.png"
+               alt="grassy hills"
                class="photo-grid__item">
         </li>
         <li class="photo-grid__list-item">
-          <img src="/#"
-               alt=""
+          <img src="images/grid/__item10.png"
+               alt="sandy river"
                class="photo-grid__item">
         </li>
         <li class="photo-grid__list-item">
-          <img src="/#"
-               alt=""
+          <img src="images/grid/__item11.png"
+               alt="birds on a wire"
                class="photo-grid__item">
         </li>
         <li class="photo-grid__list-item">
-          <img src="/#"
-               alt=""
+          <img src="images/grid/__item12.png"
+               alt="desert highway"
                class="photo-grid__item">
         </li>
       </ul>
@@ -148,7 +148,9 @@
           <h2 class="card__title">
             Maine
           </h2>
-          <img src="/#" alt="" class="card__image">
+          <img src="images/card/__Maine.png"
+               alt="lighthouse"
+               class="card__image">
         </div>
         <div class="card__column">
           <div class="card__website">
@@ -178,7 +180,9 @@
           <h2 class="card__title">
             Mew Hampshire
           </h2>
-          <img src="/#" alt="" class="card__image">
+          <img src="images/card/__NewHampshire.png"
+               alt="river valley"
+               class="card__image">
         </div>
         <div class="card__column">
           <div class="card__website">
@@ -209,7 +213,9 @@
           <h2 class="card__title">
             New York
           </h2>
-          <img src="/#" alt="" class="card__image">
+          <img src="images/card/__NewYork.png"
+               alt="City Street"
+               class="card__image">
         </div>
         <div class="card__column">
           <div class="card__website">
@@ -237,7 +243,9 @@
           <h2 class="card__title">
             Erie, PA
           </h2>
-          <img src="/#" alt="" class="card__image">
+          <img src="images/card/__EriePA.png"
+               alt="Waterfall Architecture"
+               class="card__image">
         </div>
         <div class="card__column">
           <div class="card__website">
@@ -268,7 +276,9 @@
           <h2 class="card__title">
             Ohio
           </h2>
-          <img src="/#" alt="" class="card__image">
+          <img src="images/card/__Ohio.png"
+               alt="Windmill"
+               class="card__image">
         </div>
         <div class="card__column">
           <div class="card__website">
