--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset-"UTF=8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"
-    <link rel="stylesheet" type="text/css" href="pages/index.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/pages/index.css"/>
     <title>From Portland to Portland</title>
   </head>
   <body>
