--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
     <title>From Portland to Portland</title>
   </head>
   <body>
-
+  <div class="page">
     <header class="header">
       <img src="images/logo.png"
            alt="USA Logo"
            class="header__logo">
       <ul class="header__list">
-        <li class="header__lang-link">
-          <p class="header__text">En</p>
+        <li class="header__list-item">
+          <a class="header__lang-link">
+            En
+          </a>
         </li>
-        <li class="header__lang-link">
-          <p class="header__text">Es</p>
+        <li class="header__list-item">
+          <a class="header__lang-link">
+            Es
+          </a>
         </li>
       </ul>
 
@@ -143,7 +147,7 @@
 
     <section class="places">
 
-      <div class="places__card">
+      <div class="card">
         <div class="card__column">
           <h2 class="card__title">
             Maine
@@ -175,7 +179,7 @@
         </div>
       </div>
 
-      <div class="places__card">
+      <div class="card">
         <div class="card__column">
           <h2 class="card__title">
             Mew Hampshire
@@ -208,7 +212,7 @@
         </div>
       </div>
 
-      <div class="places__card">
+      <div class="card">
         <div class="card__column">
           <h2 class="card__title">
             New York
@@ -238,7 +242,7 @@
         </div>
       </div>
 
-      <div class="places__card">
+      <div class="card">
         <div class="card__column">
           <h2 class="card__title">
             Erie, PA
@@ -271,7 +275,7 @@
         </div>
       </div>
 
-      <div class="places__card">
+      <div class="card">
         <div class="card__column">
           <h2 class="card__title">
             Ohio
@@ -333,6 +337,6 @@
         &#169;2020. Rosendo Pili
       </p>
     </footer>
-
+  </div>
   </body>
 </html>
