adding lead blocks/ styling/ media queries

--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
       <p class="lead__subtitle">
         An epic bicycle journey from Portland, ME. to Portland, OR
       </p>
+      <figure>
       <img src="images/kalegin-michail-179870-unsplash.png"
            alt="Mountain Scenery"
            class="lead__image">
-      <caption class="lead__caption">
-        YOUR JOURNEY STARTS HERE
+      <figcaption class="lead__caption">
+        Your journey starts here
       </caption>
+      <figure>
     </section>
 
     <section class="intro">
