adding grid block and styling. photo grid not complete.  debugging default space between rows

--- a/index.html
+++ b/index.html
@@ -86,63 +86,63 @@
       <ul class="photo-grid__list">
         <li class="photo-grid__list-item">
           <img src="images/grid/__item1.png"
-               alt="highway"
-               class="photo-grid__item">
+               alt="highway by water"
+               class="photo-grid__image">
         </li>
         <li class="photo-grid__list-item">
           <img src="images/grid/__item2.png"
                alt="streaking clouds"
-               class="photo-grid__item">
+               class="photo-grid__image">
         </li>
         <li class="photo-grid__list-item">
           <img src="images/grid/__item3.png"
                alt="flock of birds"
-               class="photo-grid__item">
+               class="photo-grid__image">
         </li>
         <li class="photo-grid__list-item">
           <img src="images/grid/__item4.png"
                alt="mountain with yellow flowers"
-               class="photo-grid__item">
+               class="photo-grid__image">
         </li>
         <li class="photo-grid__list-item">
           <img src="images/grid/__item5.png"
                alt="foggy lake"
-               class="photo-grid__item">
+               class="photo-grid__image">
         </li>
         <li class="photo-grid__list-item">
           <img src="images/grid/__item6.png"
-               alt="mountain range blue"
-               class="photo-grid__item">
+               alt="mountain range with blue hues"
+               class="photo-grid__image">
         </li>
         <li class="photo-grid__list-item">
           <img src="images/grid/__item7.png"
                alt="mountain with rocky foreground"
-               class="photo-grid__item">
+               class="photo-grid__image">
         </li>
         <li class="photo-grid__list-item">
           <img src="images/grid/__item8.png"
                alt="flower with blurred background"
-               class="photo-grid__item">
+               class="photo-grid__image">
         </li>
         <li class="photo-grid__list-item">
           <img src="images/grid/__item9.png"
                alt="grassy hills"
-               class="photo-grid__item">
+               class="photo-grid__image">
         </li>
         <li class="photo-grid__list-item">
           <img src="images/grid/__item10.png"
                alt="sandy river"
-               class="photo-grid__item">
+               class="photo-grid__image">
         </li>
         <li class="photo-grid__list-item">
           <img src="images/grid/__item11.png"
                alt="birds on a wire"
-               class="photo-grid__item">
+               class="photo-grid__image">
         </li>
         <li class="photo-grid__list-item">
           <img src="images/grid/__item12.png"
                alt="desert highway"
-               class="photo-grid__item">
+               class="photo-grid__image">
         </li>
       </ul>
     </section>
