adding lead__image-container. resolved responsiveness issues with lead/ header/ intro/ grid blocks. default grid-gap still unresolved

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p class="lead__subtitle">
         An epic bicycle journey from Portland, ME. to Portland, OR
       </p>
-      <figure>
+      <figure class="lead__image-container">
       <img src="images/kalegin-michail-179870-unsplash.png"
            alt="Mountain Scenery"
            class="lead__image">
