adding cover styling and some edits to place/card blocks

--- a/index.html
+++ b/index.html
@@ -309,12 +309,14 @@
     </section>
 
     <section class="cover">
-      <h2 class="cover__title">
-        Historic Route 66
-      </h2>
-      <p class="cover__subtitle">
-        The Main Street of America from Santa Monica, Cal. to Chicago, Ill. within an iframe
-      </p>
+      <a href="https://www.nps.gov/nr/travel/route66/maps66.html" target="blank" class="cover__item">
+        <h2 class="cover__title">
+          Historic Route 66
+        </h2>
+        <p class="cover__subtitle">
+          The Main Street of America from Santa Monica, Cal. to Chicago, Ill. within an iframe
+        </p>
+      </a>
     </section>
 
     <footer class="footer">
