footer block added. card__website_margin-top modifier added

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                class="card__image">
         </div>
         <div class="card__column">
-          <div class="card__website">
+          <div class="card__website card__website_margin-top">
             <p class="card__url-heading">
               URL
             </p>
