--- a/index.html
+++ b/index.html
@@ -150,15 +150,12 @@
     <section class="places">
 
       <div class="card">
-        <div class="card__column">
           <h2 class="card__title">
             Maine
           </h2>
           <img src="images/card/__Maine.png"
                alt="lighthouse"
                class="card__image">
-        </div>
-        <div class="card__column">
           <div class="card__website">
             <p class="card__url-heading">
               URL
@@ -169,6 +166,7 @@
               </p>
             </a>
           </div>
+          <div class="card__paragraph-container">
           <p class="card__paragraph-large">
             Still, as sparsely populated as it was in the 1600s, this is an extraordinary and highly underrated state full of rich history and majestic natural beauty. Maine is the main state you want to be sure not to miss. As your journey is going to be a long one, you had best be prepared for an arduous trek.
           </p>
@@ -178,19 +176,17 @@
           <p class="card__paragraph-medium">
             Average cost: $80-100.
           </p>
-        </div>
+          </div>
       </div>
 
       <div class="card">
-        <div class="card__column">
           <h2 class="card__title">
-            Mew Hampshire
+            New Hampshire
           </h2>
           <img src="images/card/__NewHampshire.png"
                alt="river valley"
                class="card__image">
-        </div>
-        <div class="card__column">
+
           <div class="card__website card__website_margin-top">
             <p class="card__url-heading">
               URL
@@ -201,7 +197,7 @@
               </p>
             </a>
           </div>
-
+          <div class="card__paragraph-container">
           <p class="card__paragraph-large">
             There's no better place to lose yourself in nature than in springtime New Hampshire. As serene and beautiful as it was in the 1700s, this state is still much less traveled than its neighbors to the South. So enjoy it while it lasts.
           </p>
@@ -211,19 +207,16 @@
           <p class="card__paragraph-large">
             Average cost: $100-150.
           </p>
-        </div>
+          </div>
       </div>
 
       <div class="card">
-        <div class="card__column">
           <h2 class="card__title">
             New York
           </h2>
           <img src="images/card/__NewYork.png"
                alt="City Street"
                class="card__image">
-        </div>
-        <div class="card__column">
           <div class="card__website">
             <p class="card__url-heading">
               URL
@@ -234,26 +227,23 @@
               </p>
             </a>
           </div>
-
+          <div class="card__paragraph-container">
           <p class="card__paragraph-large">
             Not only famous for “The Big Apple,” the state of NY also has several other reasons for going down in history. Since the late 1800s Schenectady, “The City that Lights and Hauls the World,” has been home to the world-famous General Electric Company.
           </p>
           <p class="card__paragraph-medium">
             This is where modern power generators were born as well as contemporary means of transmitting energy. So we figured this would be the perfect place to find a batteryless dynamo light for your bicycle to help you see through those dark lonely roads on your adventure. Such a light from GE will set you back about $10-20.
           </p>
-        </div>
+          </div>
       </div>
 
       <div class="card">
-        <div class="card__column">
           <h2 class="card__title">
             Erie, PA
           </h2>
           <img src="images/card/__EriePA.png"
                alt="Waterfall Architecture"
                class="card__image">
-        </div>
-        <div class="card__column">
           <div class="card__website">
             <p class="card__url-heading">
               URL
@@ -264,7 +254,7 @@
               </p>
             </a>
           </div>
-
+          <div class="card__paragraph-container">
           <p class="card__paragraph-large">
             Erie, Pennsylvania, not to be confused with the word “eerie,” although it can be from time to time, is another town worth passing through for several different reasons. While it might be most famously known as the scene of the Gettysburg address delivered by Mr. Lincoln during the Civil war, Pennsylvania also has produced a rather decent-sized Amish community (eerie, huh?)
           </p>
@@ -274,19 +264,17 @@
           <p class="card__paragraph-large">
             The current cost of a Hershey's Chocolate bar: about 60¢.
           </p>
-        </div>
+          </div>
       </div>
 
       <div class="card">
-        <div class="card__column">
           <h2 class="card__title">
             Ohio
           </h2>
           <img src="images/card/__Ohio.png"
                alt="Windmill"
                class="card__image">
-        </div>
-        <div class="card__column">
+
           <div class="card__website">
             <p class="card__url-heading">
               URL
@@ -297,14 +285,14 @@
               </p>
             </a>
           </div>
-
+          <div class="card__paragraph-container">
           <p class="card__paragraph-large">
             From the college capital of Columbus to the clean coastline of Cleveland, Ohio is a truly hidden gem. Earthquakes are surprisingly common in this particular region of North America, over 200 of which have registered with a magnitude of 2 or higher since 1776. However, earthquakes aren't the only thing shaking this centrally located state. One of the country's largest and oldest roller coaster parks is waiting to ROCK your world in Sandusky, Ohio! This will presumably be one of the most thrilling quests you'll ever complete (provided you can stomach it). Take a much-deserved break to ride as many roller coasters as you can before continue your bike ride!
           </p>
           <p class="card__paragraph-large">
             The cost of a daily ticket: about $100.
           </p>
-        </div>
+          </div>
       </div>
     </section>
 
