completed cover section with overlay

--- a/index.html
+++ b/index.html
@@ -314,12 +314,14 @@
       <a
         href="https://www.nps.gov/nr/travel/route66/maps66.html" target="_blank"
         class="cover__item">
+        <div class="cover__link-container">
         <h2 class="cover__title">
           Historic Route 66
         </h2>
         <p class="cover__subtitle">
           The Main Street of America from Santa Monica, Cal. to Chicago, Ill. within an iframe
         </p>
+        </div>
       </a>
     </section>
 
