adding modifier for New Hampshire title at 725px and 768px breakpoints

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       </div>
 
       <div class="card">
-          <h2 class="card__title">
+          <h2 class="card__title card__title_margin-top">
             New Hampshire
           </h2>
           <img src="images/card/__NewHampshire.png"
