adding style changes to header__lang-link and header__lang-link_active

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <ul class="header__list">
         <li class="header__list-item">
           <a
-            class="header__lang-link"
+            class="header__lang-link
+                   header__lang-link_active"
             href="/#">
             En
           </a>
