fixing font urls in font.css

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
         An epic bicycle journey from Portland, ME. to Portland, OR
       </p>
       <figure class="lead__image-container">
-        <img src="images/kalegin-michail-179870-unsplash.png"
-             alt="Mountain Scenery"
-             class="lead__image">
+        <img
+          src="images/kalegin-michail-179870-unsplash.png"
+          alt="Mountain Scenery"
+          class="lead__image">
         <figcaption class="lead__caption">
           Your journey starts here
         </figcaption>
