fixed lay-out issues with cover section/ got rid of syntax errors/ deleted paragraph-med_line-height_27px modifier/ deleted empty paragraph-med modifier/ fixed lay-out issue with card block

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset-"UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="pages/index.css">
     <title>From Portland to Portland</title>
@@ -64,25 +64,25 @@
       </p>
       <ul class="intro__list">
         <li class="intro__list-item">
-          <p >
+          <p class="intro__list-item-text">
             <span class="intro__list-bold-text">Distance (miles)</span>
             3,644
           </p>
         </li>
         <li class="intro__list-item">
-          <p >
+          <p class="intro__list-item-text">
             <span class="intro__list-bold-text">Travel time (days)</span>
             22
           </p>
         </li>
         <li class="intro__list-item">
-          <p >
+          <p class="intro__list-item-text">
             <span class="intro__list-bold-text">Highest point (feet)</span>
             9,613
           </p>
         </li>
         <li class="intro__list-item">
-          <p >
+          <p class="intro__list-item-text">
             <span class="intro__list-bold-text">Lowest point (feet)</span>
             -3
           </p>
@@ -247,8 +247,7 @@
           <p class="card__paragraph">
             Not only famous for “The Big Apple,” the state of NY also has several other reasons for going down in history. Since the late 1800s Schenectady, “The City that Lights and Hauls the World,” has been home to the world-famous General Electric Company.
           </p>
-          <p class="card__paragraph-med
-                    card__paragraph-med_line-height_27px">
+          <p class="card__paragraph-med">
             This is where modern power generators were born as well as contemporary means of transmitting energy. So we figured this would be the perfect place to find a batteryless dynamo light for your bicycle to help you see through those dark lonely roads on your adventure. Such a light from GE will set you back about $10-20.
           </p>
           </div>
