changed paragraph-med_line-height_27px from modifier to element

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           <p class="card__paragraph">
             Not only famous for “The Big Apple,” the state of NY also has several other reasons for going down in history. Since the late 1800s Schenectady, “The City that Lights and Hauls the World,” has been home to the world-famous General Electric Company.
           </p>
-          <p class="card__paragraph-med">
+          <p class="card__paragraph-med-tall">
             This is where modern power generators were born as well as contemporary means of transmitting energy. So we figured this would be the perfect place to find a batteryless dynamo light for your bicycle to help you see through those dark lonely roads on your adventure. Such a light from GE will set you back about $10-20.
           </p>
           </div>
